# alienfx-linux

./: CMakeLists.txt  LICENCE  README.md
AlienFX-SDK/: CMakeLists.txt
AlienFX-SDK/include/: AlienFX_SDK.h  alienfx_control.h  libusb_helper.h
AlienFX-SDK/src/: AlienFX_SDK.cpp  libusb_helper.cpp
AlienFan-SDK/: CMakeLists.txt
AlienFan-SDK/include/: AlienFan-SDK.h
AlienFan-SDK/src/: AlienFan-SDK.cpp
Example-App/: CMakeLists.txt  main.cpp
alienfx-cli/: CMakeLists.txt
alienfx-cli/include/: const.h
alienfx-cli/src/: main.cpp
include/: AlienFX_SDK.h
src/: AlienFX_SDK.cpp  main.cpp
